test/error/semantic/use_var_as_func.kat
func main(argc: int, argv: str) => int {
  let x: int = 1;
  let y: int = x(1, 2) + 3;
  return 0;
}
